# greeble

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  dev_entrypoints.py  greeble.manifest.yaml  mkdocs.yml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: adapters.md  architecture.md  cli.md  development.md  progress.md  roadmap.md
docs/assets/css/: docs-demo.css  greeble-core.css
docs/components/: README.md  audio-recorder.md  audit-dashboard.md  button.md  citation-list.md  draggable-card.md  drawer.md  drop-canvas.md  drop-zone.md  dropdown.md  factor-breakdown.md  file-upload.md  forecast-chart.md  form.md  infinite-list.md  input.md  metric-grid.md  modal.md  palette.md  score-gauge.md  step-progress.md  stepper.md  swap-select.md  table.md  tabs.md  toast.md  type-badge.md
docs/site/: README.md  index.md
examples/: README.md
examples/django-demo/: README.md  manage.py
examples/django-demo/demo/: __init__.py  settings.py  urls.py  views.py
examples/django-demo/templates/: base.html  index.html  panel.partial.html
examples/fastapi-demo/: README.md  data.py  main.py  renderers.py
examples/flask-demo/: README.md  app.py
examples/flask-demo/templates/: base.html  index.html
examples/seo-audit/: README.md  app.py
examples/seo-audit/data/: targets.json
examples/seo-audit/data/audits/: 1e2447b6.json  780942ea.json  8616270e.json  91de8b6c.json  ba5d9ff9.json  d553ca2e.json  d9cd01ff.json
examples/seo-audit/static/greeble/: audit-dashboard.css  citation-list.css  factor-breakdown.css  forecast-chart.css  greeble-core.css  (+1 more)
examples/seo-audit/templates/: index.html
examples/shared/: __init__.py  assets.py  context_processors.py
examples/site/: README.md  landing.py  playground.py
examples/site/templates/: playground.html
src/greeble/: __init__.py  main.py
src/greeble/adapters/: __init__.py  django.py  fastapi.py  flask.py  middleware.py  utils.py
src/greeble/demo/: __init__.py  helpers.py
src/greeble/scripts/: dev.py
src/greeble_cli/: __init__.py  cli.py  greeble.manifest.yaml  manifest.py  scaffold.py  starter.py
starter-app/src/greeble_starter/: app.py
starter-app/static/: site.css
starter-app/templates/: index.html
tests/: conftest.py  test_cli.py  test_dev_script.py  test_django_adapter.py  test_fastapi_adapter.py  test_flask_adapter.py  test_greeble_django_package.py  test_landing_demo.py
tests/components/: test_button_fastapi_e2e.py  test_drawer_fastapi_e2e.py  test_dropdown_fastapi_e2e.py  test_form_validated_fastapi_e2e.py  test_form_validated_flask_e2e.py  test_infinite_list_fastapi_e2e.py  test_input_fastapi_e2e.py  test_inputs_fastapi_e2e.py  test_modal_fastapi_e2e.py  test_modal_flask_e2e.py  test_palette_fastapi_e2e.py  test_stepper_fastapi_e2e.py  test_table_fastapi_e2e.py  test_table_flask_e2e.py  test_tabs_fastapi_e2e.py  test_tabs_flask_e2e.py  test_toasts_fastapi_e2e.py  test_toasts_flask_e2e.py
tools/: template_export.py
tools/greeble-cli/: README.md
tools/greeble-cli/greeble_cli/: __init__.py  cli.py  manifest.py  scaffold.py
(+19 files in other folders)
