[project]
name = "greeble"
version = "0.3.0"
description = "HTML-first component library that delivers copy and paste snippets powered by HTMX for rapid UI construction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pytest>=8.4.2",
    "PyYAML>=6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
    "fastapi>=0.110.0",
    "jinja2>=3.1.2",
    "httpx>=0.27.0",
    "python-multipart>=0.0.6",
    "uvicorn>=0.23.0",
    "types-PyYAML>=6.0.12",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "Django>=4.2",
    "Flask>=3.0",
]

[project.scripts]
dev = "greeble.scripts.dev:main"
greeble = "greeble_cli.cli:main"


[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv]
# Ensure the development dependencies are included by default when uv manages the
# project environment (uv sync / uv run).
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/greeble", "src/greeble_cli"]
include = ["greeble.manifest.yaml"]
force-include = {"greeble.manifest.yaml" = "greeble.manifest.yaml"}

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    ".venv",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (imports)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501"
]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
exclude = "examples/|tools/"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.commitizen]
name = "cz_conventional_commits"
# Read version from [project] (PEP 621) so a single source of truth is used.
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
